--- a/lib/ansible_collections/local/uws/roles/desktop/tasks/gtk/apply_colors.yml
+++ b/lib/ansible_collections/local/uws/roles/desktop/tasks/gtk/apply_colors.yml
@@ -24,4 +24,4 @@
 
 - name: "/*/ Preferred GTK colors"
   shell: "gsettings set {{ interface }} '{{ prefer }}'"
-  when: not colors.rc and colors.stdout != '\'' + prefer + '\''
+  when: colors.rc == 0 and colors.stdout != '\'' + prefer + '\''
