[UPD] uws set roles/workstation
Adds the password-store util and ensures the GNU OpenPGP.

Adds the podman via crun and podman-compose.

--- a/lib/ansible_collections/local/uws/roles/workstation/tasks/utils.yml
+++ b/lib/ansible_collections/local/uws/roles/workstation/tasks/utils.yml
@@ -1,11 +1,13 @@
-# Install some CLI utils
-- package:
+- name: "/!/ System CLI utils"
+  package:
     name:
 
       - "patch"
       - "sshfs"
       - "strace"
       - "wget"
+      - "tree"
+      - "pass"
 
       # The unified interface for all archives
       - "atool"
