--- a/lib/ansible_collections/local/uws/roles/qemu/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/qemu/tasks/main.yml
@@ -7,6 +7,6 @@
 - name: "/>/ qemu runner"
   copy:
     src: "qemu.py"
-    dest: "/usr/local/bin/qemu"
+    dest: "{{ ansible_env.HOME }}/.local/bin/qemu"
     mode: "u=rwx,g=rx,o=rx"
   become: true
